--- a/src/sass/_text-box.scss
+++ b/src/sass/_text-box.scss
@@ -4,14 +4,15 @@
 .tdbc-text-box {
     width:100%;
     border-radius: math.div($tdbc-border-radius, 2);
-    border-width: 1px;
+    border-width: 4px;
+    border-color: tdbc-color('gray') ;
     height:42px;
     padding: 0 1rem;
         
     &:focus {
         outline-color: transparent;
         outline:none;
-        border-color:tdbc-color("secondary");
-        border-width: 4px;
+        border-color: tdbc-color('secondary');
+        
     }
 }
