Change form action

--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -76,7 +76,7 @@ templateEngineOverride: md, njk
       <h2 class='tdbc-mt-md'>Sign up and I'll let you know when the next workshop is scheduled</h2>
       <h3 class='tdbc-mt-sm'>Stay in the loop for blogposts and other performance related news and content!</h3>
       <div class="tdbc-mt-md tdbc-mx-auto tdbc-text-align--left">
-        <form action="https://app.convertkit.com/forms/2538829/subscriptions" method="post">
+        <form action="https://silly-ptolemy-fb1031.netlify.app/.netlify/functions/welcome-subscriber" method="post">
           <div>
             <label for="fields[first_name]" class="tdbc-lead">First Name</label>
             <input type="text" placeholder="Preferred name" id="fields[first_name]" name="fields[first_name]" class="tdbc-text-box">
