--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -76,7 +76,7 @@ templateEngineOverride: md, njk
       <h2 class='tdbc-mt-md'>Sign up and I'll let you know when the next workshop is scheduled</h2>
       <h3 class='tdbc-mt-sm'>Stay in the loop for blogposts and other performance related news and content!</h3>
       <div class="tdbc-mt-md tdbc-mx-auto tdbc-text-align--left">
-        <form netlify name="contact" data-netlify-honeypot="bot-field" action="success">
+        <form name="contact" data-netlify-honeypot="bot-field" method="POST" data-netlify='true'>
           <div>
             <label for="name" class="tdbc-lead">First Name</label>
             <input type="text" placeholder="Preferred name" id="name" name="name" class="tdbc-text-box">
