--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -76,7 +76,7 @@ templateEngineOverride: md, njk
       <h2 class='tdbc-mt-md'>Sign up and I'll let you know when the next workshop is scheduled</h2>
       <h3 class='tdbc-mt-sm'>Stay in the loop for blogposts and other performance related news and content!</h3>
       <div class="tdbc-mt-md tdbc-mx-auto tdbc-text-align--left">
-        <form name="contact" data-netlify-honeypot="bot-field" method="POST" data-netlify='true'>
+        <form name="contact" data-netlify='true' action='success'>
           <div>
             <label for="name" class="tdbc-lead">First Name</label>
             <input type="text" placeholder="Preferred name" id="name" name="name" class="tdbc-text-box">
@@ -85,11 +85,6 @@ templateEngineOverride: md, njk
             <label for="email" class="tdbc-lead">Email<span>*</span></label>
             <input type="email" placeholder="you@company.com" id="email" name="email" class="tdbc-text-box" required="">
           </div>
-          <input
-            class="hidden"
-            name="bot-field"
-            placeholder="Don't fill this out if you're a human"
-          />
           <div class="tdbc-text-align--center tdbc-mt-sm">
             <button type="submit" class="tdbc-button tdbc-button--secondary">
               <span >Sign Up</span>
