create success page

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,7 +12,7 @@
       name="description"
       content="{{pageDescription}}"
     />
-    <link rel="icon" href="{{ '/favicon.png' | url }}" />
+    <link rel="icon" href="{{ '/favicon.ico' | url }}" />
     <link href="{{ '/css/style.css' | url }}" rel="stylesheet" />
     <meta name="twitter:card" content="summary_large_image" />
     {% if meta.twitterUsername %}
