--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -34,6 +34,9 @@ templateEngineOverride: md, njk
     height: 12vmax;
     margin: 0 auto 2rem;
   }
+  .logo img {
+    margin-left:1rem;
+  }
 
   .logo svg {
     width: 100%;
