--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -5,37 +5,43 @@ templateEngineOverride: md, njk
 ---
 
 <style>
-.logo:hover, .logo:focus{
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  perspective: 1000px;
-}
-
-@keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
+  .logo:focus,
+  .logo:hover {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
   }
 
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
+  @keyframes shake {
+    10%,
+    90% {
+      transform: translate3d(-1px, 0, 0);
+    }
 
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
+    20%,
+    80% {
+      transform: translate3d(2px, 0, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+
+    40%,
+    60% {
+      transform: translate3d(4px, 0, 0);
+    }
   }
-}
   .logo {
     width: 12vmax;
     height: 12vmax;
-    margin: 0 auto 2rem;
+    margin: 0 auto;
   }
   .logo img {
-    margin-left:1rem;
+    margin: auto;
   }
 
   .logo svg {
@@ -48,94 +54,102 @@ templateEngineOverride: md, njk
     padding-bottom: 5vh;
   }
 </style>
+{% include 'nav.njk' %}
 <header class="tdbc-hero">
   <div class="tdbc-container">
     <span class="logo">
-      <img src='/img/webperfdev.svg' alt='webperfdev logo' height='125' />
+      <a href='/'><img src='/img/webperfdev.svg' alt='webperfdev logo' height='125'/></a>
     </span>
-    <h1 class="tdbc-ink--secondary tdbc-mb-none tdbc-mt-md">{{ meta.siteName }}</h1>
+    <h1 class="tdbc-ink--secondary tdbc-mb-none ">{{ meta.siteName }}</h1>
     <h2 class="tdbc-lead tdbc-content-maxlength tdbc-ink--gray tdbc-mt-md tdbc-mx-auto">
       {{ meta.siteDescription }}
     </h2>
-    <div class="tdbc-mt-md tdbc-row tdbc-row--center-alignitems tdbc-row--center-content ">      <div class="tdbc-lead tdbc-mb-none" >Taught by&nbsp;<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/PKodmad">Pavithra Kodmad</a> (PK)</div>
+    <div class="tdbc-mt-md tdbc-row tdbc-row--center-alignitems tdbc-row--center-content ">
+      <div class="tdbc-lead tdbc-mb-none" >Taught by&nbsp;<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/PKodmad">Pavithra Kodmad</a> (PK)</div>
     </div>
   </div>
 </header>
 <main class="tdbc-container">
-      <div class='tdbc-content-width tdbc-mx-auto'>
-      <article class='tdbc-mt-md tdbc-ml-none tdbc-text-align--left'>
-      <h3> Slow websites <a target="_blank" rel="noopener noreferrer" href="https://www.netimperative.com/2020/12/09/blood-pressure-study-which-website-issue-cause-users-the-most-stress/">stress our users</a> </h3>
+  <div class='tdbc-content-width tdbc-mx-auto'>
+    <article class='tdbc-mt-md tdbc-ml-none tdbc-text-align--left'>
+      <h3> Slow websites <a target="_blank" rel="noopener noreferrer" href="https://www.netimperative.com/2020/12/09/blood-pressure-study-which-website-issue-cause-users-the-most-stress/">stress our users</a>
+      </h3>
       <p> There's a lot of <a target="_blank" rel="noopener noreferrer"  href="https://wpostats.com/">research</a> out there which talk about how customers percieve speed as they interact with out websites.
       It has been proven that user satisfaction reduces, rage clicking increases and sales on the page decreases if the site performs poorly</p>
       <h3>Performance <a target="_blank" rel="noopener noreferrer"  href="https://youtu.be/aohGIPkFXbg">is everyone's</a> job</h3>
       <p> Good performance culture in front-end teams leads to a great user experience. It's now the responsibility of every developer to know how to identify and fix performance issues in thier code
       All of us should know the basics of measuring performance, using relevant tools and build hands-on knowledge of how to build fast websites</p>
-      </article>
-      <article class='tdbc-mt-md tdbc-text-align--left'>
-      <p><b class='tdbc-ink--secondary'>I want to help you learn this stuff.</b> With the knowledge and experience I've gained over the past few years, I'm building two web performance workshops.</p>
-      </article>
-      <h3 class='tdbc-mt-md tdbc-ink--primary'>Web performance - Beginners</h3>
-      <p><b>Pre-requistes : </b> Should know fundamental Javascript, HTML and CSS.</p>
-      <h3 class='tdbc-mt-sm tdbc-ink--primary'>Web performance - Advanced(React)</h3>
-      <p><i>Coming soon...</i></p>
-      <div class='tdbc-mt-md tdbc-row tdbc-row--center-alignitems tdbc-row--center-content'>
-        <img src="https://avatars.githubusercontent.com/u/417268?v=4" width='200' height='200' alt="A woman with short hair and glasses smiling and shrugging" />
-      </div>
-        <article class='tdbc-mt-sm tdbc-text-align--left tdbc-row--center-alignitems tdbc-row--center-content'>
-          <p>Hi, I'm <a href="https://twitter.com/PKodmad" class="tdbc-ink--dark" aria-label="Twitter">Pavithra Kodmad</a>. You should call me PK. I'm a web developer with a decade's worth of experience in the industry.
+    </article>
+    <article class='tdbc-mt-md tdbc-text-align--left'>
+      <p>
+        <b class='tdbc-ink--secondary'>I want to help you learn this stuff.</b> With the knowledge and experience I've gained over the past few years, I'm building two web performance workshops.</p>
+    </article>
+    <h3 class='tdbc-mt-md tdbc-ink--primary'>Web performance - Beginners</h3>
+    <p>
+      <b>Pre-requistes : </b> Should know fundamental Javascript, HTML and CSS.</p>
+    <h3 class='tdbc-mt-sm tdbc-ink--primary'>Web performance - Advanced(React)</h3>
+    <p>
+      <i>Coming soon...</i>
+    </p>
+    <div class='tdbc-mt-md tdbc-row tdbc-row--center-alignitems tdbc-row--center-content'>
+      <img src="https://avatars.githubusercontent.com/u/417268?v=4" width='200' height='200' alt="A woman with short hair and glasses smiling and shrugging"/>
+    </div>
+    <article class='tdbc-mt-sm tdbc-text-align--left tdbc-row--center-alignitems tdbc-row--center-content'>
+      <p>Hi, I'm <a href="https://twitter.com/PKodmad" class="tdbc-ink--dark" aria-label="Twitter">Pavithra Kodmad</a>. You should call me PK. I'm a web developer with a decade's worth of experience in the industry.
           I have worked on large scale e-commerce and enterprise systems with a focus on maintaining high performance.
           In our workshops you can ask me questions on how we worked months on end to improve web performance, my experience with percieved performance and other related work. </p>
-        </article>
-        <article class='tdbc-mt-md tdbc-text-align--left'>
-          <h4>Here's some feedback I got from the first iteration of my workshop</h4>
-          <img class="tdbc-mt-md" src="https://res.cloudinary.com/dd2ulsil7/image/upload/v1629800420/Screen_Shot_2021-08-24_at_8.20.16_pm_ecgc0o.png" alt="@supminn says - This is what happens when you get to have a productive session @neogcamp! Thank you @PKodmad for helping us understanding @____lighthouse.Worked on improving my portfolio site"/>
-          <img class="tdbc-mt-md" src="https://res.cloudinary.com/dd2ulsil7/image/upload/v1629800384/Screen_Shot_2021-08-24_at_8.19.40_pm_ssjns4.png" alt="https://twitter.com/sohamsshah_/status/1429010173834665987?s=20"/>
-          <img class="tdbc-mt-md" src="https://res.cloudinary.com/dd2ulsil7/image/upload/v1629800362/Screen_Shot_2021-08-24_at_8.19.16_pm_fpuj50.png" alt="https://twitter.com/gkanishk_/status/1428997730181914633?s=20"/>
-        </article>
-        <article class='tdbc-mt-lg tdbc-text-align--left'>
-          <h4> The next workshop is at </h4>
-          <ul>
-            <li>
-              <a href="https://www.reactindia.io/workshops/2021" target="_blank" rel="noopener noreferrer">React India</a> - Nov 19 2021
+    </article>
+    <article class='tdbc-mt-md tdbc-text-align--left'>
+      <h4>Here's some feedback I got from the first iteration of my workshop</h4>
+      <img class="tdbc-mt-md" src="https://res.cloudinary.com/dd2ulsil7/image/upload/v1629800420/Screen_Shot_2021-08-24_at_8.20.16_pm_ecgc0o.png" alt="@supminn says - This is what happens when you get to have a productive session @neogcamp! Thank you @PKodmad for helping us understanding @____lighthouse.Worked on improving my portfolio site"/>
+      <img class="tdbc-mt-md" src="https://res.cloudinary.com/dd2ulsil7/image/upload/v1629800384/Screen_Shot_2021-08-24_at_8.19.40_pm_ssjns4.png" alt="https://twitter.com/sohamsshah_/status/1429010173834665987?s=20"/>
+      <img class="tdbc-mt-md" src="https://res.cloudinary.com/dd2ulsil7/image/upload/v1629800362/Screen_Shot_2021-08-24_at_8.19.16_pm_fpuj50.png" alt="https://twitter.com/gkanishk_/status/1428997730181914633?s=20"/>
+    </article>
+    <article class='tdbc-mt-lg tdbc-text-align--left'>
+      <h4> The next workshop is at </h4>
+      <ul>
+        <li>
+          <a href="https://www.reactindia.io/workshops/2021" target="_blank" rel="noopener noreferrer">React India</a> - Nov 19 2021
             </li>
-            <li><a href="mailto:pavithra.kodmad@gmail.com">Contact me</a> to book a workshop at your conference</li>
-          </ul>
-        </article>
-      </div>
-      <h2 class='tdbc-mt-md tdbc-text-align--center'>Sign up and I'll let you know when the next workshop is scheduled</h2>
-      <h3 class='tdbc-mt-sm tdbc-text-align--center'>You will also receive emails when I publish a new blogpost on my web perf newsletter "Fast and Feasible"!</h3>
-      <div class="tdbc-mt-md tdbc-mx-auto tdbc-text-align--left">
-        <form name="contact" data-netlify='true' action='success'>
-          <div>
-            <label for="name" class="tdbc-lead">First Name</label>
-            <input type="text" placeholder="Preferred name" id="name" name="name" class="tdbc-text-box">
-          </div>
-          <div class='tdbc-mt-sm'>
-            <label for="email" class="tdbc-lead">Email<span>*</span></label>
-            <input type="email" placeholder="you@company.com" id="email" name="email" class="tdbc-text-box" required="">
-          </div>
-          <div class="tdbc-text-align--center tdbc-mt-sm">
-            <button type="submit" class="tdbc-button tdbc-button--secondary">
-              <span >Sign Up</span>
-            </button>
-          </div>
-          <div class="tdbc-text-align--center tdbc-mt-sm">No spam, unsubscribe any time.</div>
-        </form>
-      </div>
+        <li>
+          <a href="mailto:pavithra.kodmad@gmail.com">Contact me</a> to book a workshop at your conference</li>
+      </ul>
+    </article>
   </div>
-  <h3> Blogs shared in the newsletter </h3>
-  <div class="tdbc-section">
-    <ul class="tdbc-column-container">
-      {%- for blog in collections.blogs -%}
+  <h2 class='tdbc-mt-md tdbc-text-align--center'>Sign up and I'll let you know when the next workshop is scheduled</h2>
+  <h3 class='tdbc-mt-sm tdbc-text-align--center'>You will also receive emails when I publish a new blogpost on my web perf newsletter "Fast and Feasible"!</h3>
+  <div class="tdbc-mt-md tdbc-mx-auto tdbc-text-align--left">
+    <form name="contact" data-netlify='true' action='success'>
+      <div>
+        <label for="name" class="tdbc-lead">First Name</label>
+        <input type="text" placeholder="Preferred name" id="name" name="name" class="tdbc-text-box">
+      </div>
+      <div class='tdbc-mt-sm'>
+        <label for="email" class="tdbc-lead">Email<span>*</span></label>
+        <input type="email" placeholder="you@company.com" id="email" name="email" class="tdbc-text-box" required="">
+      </div>
+      <div class="tdbc-text-align--center tdbc-mt-sm">
+        <button type="submit" class="tdbc-button tdbc-button--secondary">
+          <span >Sign Up</span>
+        </button>
+      </div>
+      <div class="tdbc-text-align--center tdbc-mt-sm">No spam, unsubscribe any time.</div>
+    </form>
+  </div>
+</div>
+<h3 class='tdbc-mt-md'> Blogs shared in the newsletter </h3>
+<div class="tdbc-section">
+  <ul class="tdbc-column-container">
+    {%- for blog in collections.blogs -%}
       <li class="tdbc-card">
         <div class="tdbc-card__content">
           <a href="{{ blog.url }}" class="tdbc-card__title">{{ blog.data.title }}</a>
           <p>{{ blog.data.description }}</p>
         </div>
       </li>
-      {%- endfor -%}
-    </ul>
-  </div>
+    {%- endfor -%}
+  </ul>
+</div>
 {{ content | safe }}
 
 </main>
