Style the newsletter page

--- a/src/_includes/newsletter.njk
+++ b/src/_includes/newsletter.njk
@@ -60,17 +60,16 @@ templateEngineOverride: md, njk
       <a href='/'><img src='/img/webperfdev.svg' alt='webperfdev logo' height='125'/></a>
     </span>
     <h1 class="tdbc-ink--secondary tdbc-mb-none">Fast and feasible</h1>
-    <h2 class="tdbc-lead tdbc-content-maxlength tdbc-ink--gray tdbc-mt-md tdbc-mx-auto">
+    <h2 class="tdbc-lead tdbc-content-maxlength tdbc-ink--gray  tdbc-mx-auto">
       A web performance newsletter with original blogs about various aspects of modern performance measurement and mitigation.
     </h2>
-    <div class="tdbc-mt-md tdbc-row tdbc-row--center-alignitems tdbc-row--center-content ">
+    <div class=" tdbc-row tdbc-row--center-alignitems tdbc-row--center-content ">
       <div class="tdbc-lead tdbc-mb-none" >Written by&nbsp;<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/PKodmad">Pavithra Kodmad</a> (PK)</div>
     </div>
   </div>
 </header>
 <main class="tdbc-container">
   <div class='tdbc-form-width tdbc-mx-auto'>
-    <h4 class='tdbc-mt-sm tdbc-text-align--center'>You will only receive emails when I publish a new edition of the newsletter.</h4>
     <p>Check out previous editions <a href="https://buttondown.email/pkodmad/archive/" target="_blank" rel="noopener noreferrer">here</a>
     </p>
     <div class="tdbc-mt-md tdbc-mx-auto tdbc-text-align--left">
