Fix success path from newsletter page

--- a/src/_includes/newsletter.njk
+++ b/src/_includes/newsletter.njk
@@ -73,7 +73,7 @@ templateEngineOverride: md, njk
     <p>Check out previous editions <a href="https://buttondown.email/pkodmad/archive/" target="_blank" rel="noopener noreferrer">here</a>
     </p>
     <div class="tdbc-mt-md tdbc-mx-auto tdbc-text-align--left">
-      <form name="contact" data-netlify='true' action='success'>
+      <form name="contact" data-netlify='true' action='/success'>
         <div>
           <label for="name" class="tdbc-lead">First Name</label>
           <input type="text" placeholder="Preferred name" id="name" name="name" class="tdbc-text-box">
