Make a few good looking tweaks

--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -37,7 +37,7 @@ templateEngineOverride: md, njk
   }
   .logo {
     width: 12vmax;
-    height: 12vmax;
+    height: 150px;
     margin: 0 auto;
   }
   .logo img {
