--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -2,8 +2,15 @@
 layout: base.njk
 ---
 {% include 'sitenav.njk' %}
+<style>
+  .tdbc-post-header {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    text-align: left;
+  }
+</style>
 
-<header class="tdbc-hero">
+<header class="tdbc-post-header">
   <div class="tdbc-container">
     <h1 class="tdbc-ink--primary tdbc-mb-none">{{ title }}</h1>
     <h2 class="tdbc-lead tdbc-content-maxlength tdbc-ink--gray tdbc-mt-md tdbc-mx-auto">
