--- a/src/_includes/newsletter.njk
+++ b/src/_includes/newsletter.njk
@@ -37,7 +37,7 @@ templateEngineOverride: md, njk
   }
   .logo {
     width: 12vmax;
-    height: 12vmax;
+    height: 150px;
     margin: 0 auto;
   }
   .logo img {
