--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -13,7 +13,7 @@ layout: base.njk
 <header class="tdbc-post-header">
   <div class="tdbc-container">
     <h1 class="tdbc-ink--primary tdbc-mb-none">{{ title }}</h1>
-    <h2 class="tdbc-lead tdbc-content-maxlength tdbc-ink--gray tdbc-mt-md tdbc-mx-auto">
+    <h2 class="tdbc-lead tdbc-content-maxlength tdbc-ink--gray tdbc-mt-md">
       {{ description }}
     </h2>
   </div>
